SubBt/force-app/main/default/objects/BT_Vendor_RFQ_Contacts__c/BT_Vendor_RFQ_Contacts__c.object-meta.xml
<CustomObject>
    <label>BT Vendor RFQ Contacts</label>
    <nameField>
        <displayFormat>VRC-{000000}</displayFormat>
        <label>BT Vendor RFQ Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Vendor RFQ Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>