SubBt/force-app/main/default/objects/BT_Vendor_RFQ_Contacts__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BT_Vendor_RFQ_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>