SubBt/force-app/main/default/objects/BT_Vendor_RFQ_Contacts__c/fields/Vendor_RFQ__c.field-meta.xml
<CustomField>
    <fullName>Vendor_RFQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor RFQ</label>
    <referenceTo>RFQ_To_Vendor__c</referenceTo>
    <relationshipName>BT_Vendor_RFQ_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>